--- a/InternalUAMTv/InternalUAMTv/detail/detail.html
+++ b/InternalUAMTv/InternalUAMTv/detail/detail.html
@@ -16,12 +16,12 @@
    
      </head>
      <body>
-      <header>
+   <header>
     <img src="../images/logo.svg" alt="">
         <nav>
             <ul>
-                <li><i id="fa-wifi" class="fa fa-wifi "></i></li>
-                <li ><i id="fa-bell" class="fa fa-bell" ></i><span class="badge" id="badge">5</span>
+                <li onclick="openWifiNav()"><i id="fa-wifi" class="fa fa-wifi "></i></li>
+                <li onclick="openNav()"><i id="fa-bell" class="fa fa-bell" ></i><span class="badge" id="badge">5</span>
                 </li>
                 <li><i id="fa-user" class="fa fa-user "></i></li>
                 <span class="user_name">Jamshed</span>  
@@ -29,6 +29,71 @@
         </nav>
 </header>
 <div class="main_container">
+
+
+
+
+     <div id="mySidenav" class="sidenav">
+
+                <div class="notification_header">
+                    <p><i class="fa fa-arrow-left" onclick="closeNav()"></i>&nbsp; <span>Notifications</span></p>
+                </div>
+                <div class="no_notification">
+                    <i class="fa fa-bell fa_bell"></i>
+                    <h2 class="no-notification">No Notifications</h2>
+                </div>
+            </div>
+
+
+            <!-- Network and Internet section -->
+            <div id="mySidenav_ntwork" class="sidenav">
+                <div class="network_header">
+                    <p><i class="fa fa-arrow-left" onclick="closeWifiNav()"></i>&nbsp; <span>Network & Internet</span></p>
+                </div>
+                <div class="avail_network">
+                    <p>Available Network</p>
+                </div>
+                <div class="avail_network_body">
+                    <div class="d-flex justify-content-around">
+                        <div>
+                            <i class="fa fa-wifi ml-2 wifi_icon"></i>
+                            <span class="ml-3 mb-5 wifi_name">Home <br> <span class="conented_wifi_txt" >Connectd</span> </span>
+                        </div>
+                        <p><i class="fa fa-lock lock_icon"></i></p>
+                    </div>
+                    <div class="d-flex justify-content-around mt-5">
+                        <div>
+                            <i class="fa fa-wifi ml-2 wifi_icon"></i>
+                            <span class="ml-3 mb-5 wifi_name">Bob </span>
+                        </div>
+                        <p><i class="fa fa-lock lock_icon ml-5"></i></p>
+                    </div>
+
+                </div>
+            </div>
+
+            <script>
+                function openNav() {
+                    document.getElementById("mySidenav").style.width = "490px";
+                }
+
+                function closeNav() {
+                    document.getElementById("mySidenav").style.width = "0";
+                }
+
+                function openWifiNav() {
+                    document.getElementById("mySidenav_ntwork").style.width = "490px";
+                }
+
+                function closeWifiNav() {
+                    document.getElementById("mySidenav_ntwork").style.width = "0";
+                }
+            </script>
+
+
+
+
+
 <h1><span><i class="fa fa-arrow-left mr-2"></i></span> Remotti Proffession<span class="fa fa-star rating ml-3"> 4.2</span></h1>
 <p class="type">Documentry, Artist, Scandalous <span class="fa fa-circle circle ml-3"> 1h 14m</span><span class="fa fa-circle circle ml-3"> 2016</span><span class="age"> 18+</span></p>
       <span>
