--- a/InternalUAMTv/InternalUAMTv/settings/settings.html
+++ b/InternalUAMTv/InternalUAMTv/settings/settings.html
@@ -17,12 +17,12 @@
 
 <body>
 
- <header>
+  <header>
     <img src="../images/logo.svg" alt="">
         <nav>
             <ul>
-                <li><i id="fa-wifi" class="fa fa-wifi "></i></li>
-                <li ><i id="fa-bell" class="fa fa-bell" ></i><span class="badge" id="badge">5</span>
+                <li onclick="openWifiNav()"><i id="fa-wifi" class="fa fa-wifi "></i></li>
+                <li onclick="openNav()"><i id="fa-bell" class="fa fa-bell" ></i><span class="badge" id="badge">5</span>
                 </li>
                 <li><i id="fa-user" class="fa fa-user "></i></li>
                 <span class="user_name">Jamshed</span>  
@@ -31,6 +31,89 @@
 </header>
 
    <div class="main_section">
+   
+   
+   
+   
+     <div id="mySidenav" class="sidenav">
+
+                <div class="notification_header">
+                    <p><i class="fa fa-arrow-left" onclick="closeNav()"></i>&nbsp; <span>Notifications</span></p>
+                </div>
+                <div class="no_notification">
+                    <i class="fa fa-bell fa_bell"></i>
+                    <h2 class="no-notification">No Notifications</h2>
+                </div>
+            </div>
+
+
+            <!-- Network and Internet section -->
+            <div id="mySidenav_ntwork" class="sidenav">
+                <div class="network_header">
+                    <p><i class="fa fa-arrow-left" onclick="closeWifiNav()"></i>&nbsp; <span>Network & Internet</span></p>
+                </div>
+                <div class="avail_network">
+                    <p>Available Network</p>
+                </div>
+                <div class="avail_network_body">
+                    <div class="d-flex justify-content-around">
+                        <div>
+                            <i class="fa fa-wifi ml-2 wifi_icon"></i>
+                            <span class="ml-3 mb-5 wifi_name">Home <br> <span class="conented_wifi_txt" >Connectd</span> </span>
+                        </div>
+                        <p><i class="fa fa-lock lock_icon"></i></p>
+                    </div>
+                    <div class="d-flex justify-content-around mt-5">
+                        <div>
+                            <i class="fa fa-wifi ml-2 wifi_icon"></i>
+                            <span class="ml-3 mb-5 wifi_name">Bob </span>
+                        </div>
+                        <p><i class="fa fa-lock lock_icon ml-5"></i></p>
+                    </div>
+
+                </div>
+            </div>
+
+            <script>
+                function openNav() {
+                    document.getElementById("mySidenav").style.width = "490px";
+                }
+
+                function closeNav() {
+                    document.getElementById("mySidenav").style.width = "0";
+                }
+
+                function openWifiNav() {
+                    document.getElementById("mySidenav_ntwork").style.width = "490px";
+                }
+
+                function closeWifiNav() {
+                    document.getElementById("mySidenav_ntwork").style.width = "0";
+                }
+            </script>
+   
+   
+   
+      <!-- Loader section -->
+             <div class=" spinner .loadingio-spinner-spinner-rexyx9adxl" id="spinner_display_id">
+            <div class="ldio-eon67kjyqwt">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+   
+   
+   
 <div class="container-fluid">
         <div class="row" style=" height: 100vh;">
            <div class="col-3 offset-2 ">
