--- a/InternalUAMTv/InternalUAMTv/settings/settings.html
+++ b/InternalUAMTv/InternalUAMTv/settings/settings.html
@@ -129,7 +129,7 @@
                     <button class="mt-4 nav_button" onclick="showAboutSection()">About Us</button>
                 </div>
             </div>
-            <div class="col-7 mt-5 pl-5 my-4">
+            <div id="parentRightSection" class="col-7 mt-5 pl-5 my-4">
             <br><br><br>
             
            
