category screen scroll and remote configuation done.

--- a/InternalUAMTv/InternalUAMTv/home/home.html
+++ b/InternalUAMTv/InternalUAMTv/home/home.html
@@ -187,9 +187,9 @@
 
 
 
-							<button class="play_btn mt-5">
+							<button id="add_play_btn" class="play_btn mt-5">
 								<i class="fa fa-play text-white"></i><span class="ml-3"
-									id="add_play_btn"> Play Now</span>
+									> Play Now</span>
 							</button>
 
 							<button class="favourite_btn mt-5">
