home screen backgrond image fixed

--- a/InternalUAMTv/InternalUAMTv/detail/detail.html
+++ b/InternalUAMTv/InternalUAMTv/detail/detail.html
@@ -95,7 +95,9 @@
 
 
 <h1><span><i class="fa fa-arrow-left mr-2"></i></span> Remotti Proffession<span class="fa fa-star rating ml-3"> 4.2</span></h1>
-<p class="type">Documentry, Artist, Scandalous <span class="fa fa-circle circle ml-3"> 1h 14m</span><span class="fa fa-circle circle ml-3"> 2016</span><span class="age"> 18+</span></p>
+<p class="type">Documentry, Artist, Scandalous <span class="fa fa-circle circle ml-3"> 1h 14m</span><span class="fa fa-circle circle ml-3"> 2016</span>
+<!-- <span class="age"> 18+</span> -->
+</p>
       <span>
             <button class="play_btn mt-5"><i class="fa fa-play text-white"></i><span class="ml-3">Play Now</span></button>
             <button class="watch_btn mt-5">Watch Trailer</button>
