--- a/InternalUAMTv/InternalUAMTv/home/home.html
+++ b/InternalUAMTv/InternalUAMTv/home/home.html
@@ -107,7 +107,7 @@
                         <div>
                             <i class="fa fa-wifi ml-2 wifi_icon"></i>  <span class="ml-3 mb-5 wifi_name">Home <br> <span
 
-								class="conented_wifi_txt">Connectd</span>
+								class="conented_wifi_txt">Connected</span>
                             </span>
                         </div>
                         <p>
@@ -157,28 +157,21 @@
                             <button id="detail" class="nonstyle_btns ml-5">Details ></button>
                         </p>
 
-                        <button id="add_play_btn" class="play_btn mt-5" onclick="videoSection()">
+                        <button id="add_play_btn" class="play_btn mt-5" onclick="setMovie()">
                             <i class="fa fa-play text-white"></i><span class="ml-3"> Play Now</span>
                         </button>
-                        <script>
-                            function videoSection(){
-                            							location.href="../Video/video.html"
-                            							}
-                        </script>
-
+                       
                         <button class="favourite_btn mt-5">
                             <i class="fa fa-star text-white"></i><span class="ml-3" id="add_fav_btn"> Add to favourites</span>
                         </button>
                         </span>
                         <br>
                         <br>
+                     
                         <div class="left_right_arrow">
                             <span id="right_bg">
-
 								<button class="nonstyle_btns">></button>
-
 							</span><span id="left_bg">
-
 								<button class="nonstyle_btns"><</button>
 
 							</span>
