--- a/InternalUAMTv/InternalUAMTv/Video/video.html
+++ b/InternalUAMTv/InternalUAMTv/Video/video.html
@@ -24,14 +24,27 @@
 
 <body>
 
-<video id="player_one" class="video-js vjs-fluid vjs-default-skin" controls preload playsinline >
-<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerFun.mp4" type="video/mp4">
+<video id="player_one" class="video-js vjs-fluid vjs-default-skin" controls preload playsinline poster="../images/abc.gif">
+
 </video>
 <div class="text_documentry ">Documentry</div>
 <div class="text_view ml-5">216K Views</div>
 <div class="text_div">Remotti profession</div>
 <script>
 var player = videojs('player_one');
+
+
+
+ var url = localStorage.getItem("video");
+
+
+console.log(url);
+
+player.src({
+  type: 'application/x-mpegURL',
+  src: url
+});
+
 player.nuevo({
 title: "Nuevo plugin for VideoJs Player"
 });
