--- a/InternalUAMTv/InternalUAMTv/detail/detail.html
+++ b/InternalUAMTv/InternalUAMTv/detail/detail.html
@@ -24,7 +24,7 @@
                 <li onclick="openNav()"><i id="fa-bell" class="fa fa-bell" ></i><span class="badge" id="badge">5</span>
                 </li>
                 <li><i id="fa-user" class="fa fa-user "></i></li>
-                <span class="user_name">Jamshed</span>  
+                <span id="username_id" class="user_name">Jamshed</span>  
             </ul>      
         </nav>
 </header>
