--- a/InternalUAMTv/InternalUAMTv/home/home.html
+++ b/InternalUAMTv/InternalUAMTv/home/home.html
@@ -29,7 +29,7 @@
                 </li>
                 <li><i id="fa-user" class="fa fa-user "></i>
                 </li>
-                <span class="user_name">Jamshed</span>
+                <span id="user_name_id" class="user_name"></span>
             </ul>
         </nav>
     </header>
@@ -157,7 +157,7 @@
                             <button id="detail" class="nonstyle_btns ml-5">Details ></button>
                         </p>
 
-                        <button id="add_play_btn" class="play_btn mt-5" onclick="setMovie()">
+                        <button id="add_play_btn" class="play_btn mt-5">
                             <i class="fa fa-play text-white"></i><span class="ml-3"> Play Now</span>
                         </button>
                        
