additional change in Detail and Home screen

--- a/InternalUAMTv/InternalUAMTv/detail/detail.html
+++ b/InternalUAMTv/InternalUAMTv/detail/detail.html
@@ -111,7 +111,7 @@
 
             <button class="play_btn mt-5"><i class="fa fa-play text-white"></i><span class="ml-3">Play Now</span>
             </button>
-            <button class="watch_btn mt-5">Watch Trailer</button>
+            <button class="watch_btn mt-5"><i class="fa fa-star text-white"></i>Add to Favourite</button>
             <span><i class="far fa-heart text-white" id="heart_icon"></i> </span>
             </span>
 
@@ -123,7 +123,7 @@
 
                         </div>
                         <div class="d-flex mt-3 justify-content-between description">
-                            <p id="detail_video_desc"></p>
+                            <p id="detail_video_desc">Fiore Ribelle, primo biopic sul guru indiano Osho Raijneesh, diretto dal regista indiano Krishan Hooda, è l’occasione per vivere un viaggio di ricerca unico al di là del mito e della fede.</p>
 
                         </div>
 
@@ -137,57 +137,38 @@
 
                     </div>
                 </div>
-                <h2 class="cast">Cast</h2>
-                <div class="row mt-5" style="font-size: 23px;">
-                    <div class="col-8">
-                        <div class="row">
-                            <div class="col-2">
-                                <p><span><i class="fa fa-circle" id="circle_of_cast"></i></span>&nbsp; Cast-1</p>
-                            </div>
-                            <div class="col-2">
-                                <p><span><i class="fa fa-circle " id="circle_of_cast"></i></span>&nbsp; Cast-2</p>
-                            </div>
-                            <div class="col-2">
-                                <p><span><i class="fa fa-circle " id="circle_of_cast"></i></span>&nbsp; Cast-3</p>
-                            </div>
-                            <div class="col-2">
-                                <p><span><i class="fa fa-circle " id="circle_of_cast"></i></span>&nbsp; Cast-4</p>
-                            </div>
-                            <div class="col-2">
-                                <p><span><i class="fa fa-circle " id="circle_of_cast"></i></span>&nbsp; Cast-5</p>
-                            </div>
-                            <div class="col-2">
-                                <p><span><i class="fa fa-circle " id="circle_of_cast"></i></span>&nbsp; Cast-6</p>
-                            </div>
-                        </div>
-                    </div>
+                <h2 class="cast mt-3">Cast</h2>
+                <br>
+                <br>
+                <div id="menu">
+                    <ul>
+                        <li>First menu</li>
+                        <li>Second item1</li>
+                        <li>Third menu item</li>
+                        <li>Third menu item</li>
+                        <li>Third menu item</li>
+                        <li>Third menu item</li>
+                        <li>Third menu item</li>
+
+                    </ul>
                 </div>
                 <br>
+                <br>
+                <br>
                 <h2 class="cast">Director</h2>
-                <div class="row mt-5" style="font-size: 23px;">
-                    <div class="col-8">
-                      <div class="row">
-                            <div class="col-2">
-                                <p><span><i class="fa fa-circle " id="circle_of_cast"></i></span>&nbsp; Director-1</p>
-                            </div>
-                            <div class="col-2">
-                                <p><span><i class="fa fa-circle " id="circle_of_cast"></i></span>&nbsp; Director-2</p>
-                            </div>
-                            <div class="col-2">
-                                <p><span><i class="fa fa-circle " id="circle_of_cast"></i></span>&nbsp; Director-3</p>
-                            </div>
-                            <div class="col-2">
-                                <p><span><i class="fa fa-circle " id="circle_of_cast"></i></span>&nbsp; Director-4</p>
-                            </div>
-                            <div class="col-2">
-                                <p><span><i class="fa fa-circle " id="circle_of_cast"></i></span>&nbsp; Director-5</p>
-                            </div>
-                            <div class="col-2">
-                                <p><span><i class="fa fa-circle " id="circle_of_cast"></i></span>&nbsp; Director-6</p>
-                            </div>
-                        </div>
-                    </div>
 
+                <div id="menu">
+                    <br>
+                    <br>
+                    <ul>
+                        <li>Director-1</li>
+                        <li>Director-2</li>
+                        <li>Director-3</li>
+                        <li>Director-4</li>
+                        <li>Director-5</li>
+
+
+                    </ul>
                 </div>
             </div>
     </body>
