--- a/InternalUAMTv/InternalUAMTv/home/home.html
+++ b/InternalUAMTv/InternalUAMTv/home/home.html
@@ -156,7 +156,7 @@
                             <span>2020</span>
                             <button id="detail" class="nonstyle_btns ml-5">Details ></button>
                         </p>
-
+                        <span>
                         <button id="add_play_btn" class="play_btn mt-5">
                             <i class="fa fa-play text-white"></i><span class="ml-3"> Play Now</span>
                         </button>
@@ -164,9 +164,7 @@
                         <button class="favourite_btn mt-5">
                             <i class="fa fa-film text-white"></i><span class="ml-3" id="add_fav_btn"> Watch Trailor</span>
                         </button>
-                         <button class="like_btn  mt-5">
-                            <i class="fa fa-heart text-white"></i>
-                        </button>
+                        
                         </span>
                         <br>
                         <br>
