api done for fav section

--- a/InternalUAMTv/InternalUAMTv/detail/detail.html
+++ b/InternalUAMTv/InternalUAMTv/detail/detail.html
@@ -141,15 +141,8 @@
                 <br>
                 <br>
                 <div id="menu">
-                    <ul>
-                        <li>First menu</li>
-                        <li>Second item1</li>
-                        <li>Third menu item</li>
-                        <li>Third menu item</li>
-                        <li>Third menu item</li>
-                        <li>Third menu item</li>
-                        <li>Third menu item</li>
-
+                    <ul id="cast_case" >
+                       
                     </ul>
                 </div>
                 <br>
@@ -160,14 +153,8 @@
                 <div id="menu">
                     <br>
                     <br>
-                    <ul>
-                        <li>Director-1</li>
-                        <li>Director-2</li>
-                        <li>Director-3</li>
-                        <li>Director-4</li>
-                        <li>Director-5</li>
-
-
+                    <ul id="director_case">
+                       
                     </ul>
                 </div>
             </div>
