--- a/InternalUAMTv/InternalUAMTv/home/home.html
+++ b/InternalUAMTv/InternalUAMTv/home/home.html
@@ -187,7 +187,7 @@
                                 <div class="d-flex justify-content-between catagory_type_text">
                                     <p id="category_list_id">Category</p>
 
-                                    <button id="see_more_list_id" class="nonstyle_btns">See more ></button>
+                                    <button id="see_more_list_id" class="nonstyle_btns" onclick="viewCategory()">See more ></button>
                                 </div>
                                 <div id="myCarousel1" class="carousel slide" data-ride="carousel" data-interval="0">
                                     <!-- Wrapper for carousel items -->
@@ -203,7 +203,11 @@
                             </div>
                         </div>
                     </div>
-
+                              <script type="text/javascript">
+                              function viewCategory(){
+                              window.location.href="../Cat_Rec_Most_view/categories.html"
+                              }
+                              </script>
                     <br>
                     <br>
 
@@ -237,7 +241,7 @@
                             <div class="col-lg-12 mx-auto ml-5">
                                 <div class="d-flex justify-content-between catagory_type_text">
                                     <p id="most_recent_list_id">Most Recent</p>
-                                    <button id="see_more_list_id" class="nonstyle_btns">See more ></button>
+                                    <button id="see_more_list_id" class="nonstyle_btns" >See more ></button>
                                 </div>
                                 <div id="myCarousel3" class="carousel slide" data-ride="carousel" data-interval="0">
                                     <!-- Wrapper for carousel items -->
