fav screen donee

--- a/InternalUAMTv/InternalUAMTv/home/home.html
+++ b/InternalUAMTv/InternalUAMTv/home/home.html
@@ -276,7 +276,7 @@
                 </div>
 
                 <!-- Favourite  -->
-                <div class="categories_section mt-5" id="favourite_setion" style="display: none;">
+                <div class="categories_section mt-5" id="favourite_setion" style="display: none; overflow: hidden;">
                     <div class=" container-fluid pl-5pr-5 ">
                         <div class="row ">
                             <div class="col-lg-12 col-xl-12 ml-2">
