details api integrate vido play

--- a/InternalUAMTv/InternalUAMTv/detail/detail.html
+++ b/InternalUAMTv/InternalUAMTv/detail/detail.html
@@ -29,7 +29,7 @@
                     </li>
                     <li><i id="fa-user" class="fa fa-user "></i>
                     </li>
-                    <span id="username_id" class="user_name">Jamshed</span> 
+                    <span id="user_name_id" class="user_name">Jamshed</span> 
                 </ul>
             </nav>
         </header>
