--- a/InternalUAMTv/InternalUAMTv/Video/video.html
+++ b/InternalUAMTv/InternalUAMTv/Video/video.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="../css/all.min.css" />
-    
+      <script src="video.js"></script>
     <script language="javascript" type="text/javascript" src="../js/keyTizen.js"></script>
     <link rel="stylesheet" type="text/css" href="video.css" />
     <link rel="stylesheet" type="text/css" href="videojs.min.css" />
@@ -25,28 +25,33 @@
 
 <body>
 
-
-<video id="player_one" class="video-js vjs-fluid vjs-default-skin" controls preload playsinline poster="../images/abc.gif">
-
+<video id="player_one" class="video-js vjs-fluid vjs-default-skin" controls preload playsinline poster="">
 </video>
-<div class="text_documentry ">Documentry</div>
-<div class="text_view ml-5">216K Views</div>
-<div class="text_div">Remotti profession</div>
+<div class="text_documentry " style="visibility: hidden;">Documentry</div>
+<div class="text_view ml-5" style="visibility: hidden;">216K Views</div>
+<div class="text_div" style="visibility: hidden;">Remotti profession</div>
+    <div class="container-fluid">
+        <div class="row" style="font-size: 36px; color: white">
+            <div class="col-2 offset-1 mr-4" style="visibility: hidden;">01:00:00</div>
+            <div class="col-1 offset-1 text-center"><i class="fa fa-fast-backward"></i>
+            </div>
+            <div class="col-1  text-center"><i class="fa fa-play"></i>
+            </div>
+            <div class="col-1 text-center"><i class="fa fa-fast-forward"></i>
+            </div>
+            <div class="col-2 offset-2 "><span><i class="fa fa-credit-card mr-5"></i></span><span><i class="fa fa-cog mr-3 "></i></span><span style="visibility: hidden;">10:00:00</span></div>
+        </div>
+    </div>
+
+
 <script>
 var player = videojs('player_one');
-
-
-
  var url = localStorage.getItem("video");
-
-
 console.log(url);
-
 player.src({
   type: 'application/x-mpegURL',
   src: url
 });
-
 player.nuevo({
 title: "Nuevo plugin for VideoJs Player"
 });
@@ -55,7 +60,7 @@ volumeStep: 0.1,
 seekStep: 5
 });
 </script>
->>>>>>> 378e126a859961ab4f012fd8fb5b5b16f89d6234
+
 </body>
 
 </html>
