changes in all screen

--- a/InternalUAMTv/InternalUAMTv/settings/settings.html
+++ b/InternalUAMTv/InternalUAMTv/settings/settings.html
@@ -22,9 +22,12 @@
     <img src="../images/logo.svg" alt="">
         <nav>
             <ul>
-                <li onclick="openWifiNav()"><i id="fa-wifi" class="fa fa-wifi "></i></li>
-                <li onclick="openNav()"><i id="fa-bell" class="fa fa-bell" ></i><span class="badge" id="badge">5</span>
+                <!--  
+                <li onclick="openWifiNav()"><i id="fa-wifi" class="fa fa-wifi "></i>
                 </li>
+                <li onclick="openNav()"><i id="fa-bell" class="fa fa-bell"></i><span class="badge" id="badge">5</span>
+                </li>
+                -->
                 <li><i id="fa-user" class="fa fa-user "></i></li>
                 <span id="user_name_id" class="user_name"></span>  
             </ul>      
