--- a/InternalUAMTv/InternalUAMTv/home/home.html
+++ b/InternalUAMTv/InternalUAMTv/home/home.html
@@ -23,10 +23,12 @@
         <img src="../images/logo.svg" alt="">
         <nav>
             <ul>
+            <!--  
                 <li onclick="openWifiNav()"><i id="fa-wifi" class="fa fa-wifi "></i>
                 </li>
                 <li onclick="openNav()"><i id="fa-bell" class="fa fa-bell"></i><span class="badge" id="badge">5</span>
                 </li>
+                -->
                 <li><i id="fa-user" class="fa fa-user "></i>
                 </li>
                 <span id="user_name_id" class="user_name"></span>
@@ -59,7 +61,7 @@
                     <input type="text" class="search_Box" placeholder="Search">
 
                     <button id="watch_btn_id" onclick="showWatchSection()">
-                        <span> <i class="far fa-play-circle"></i></span>  <span class="ml-4" id="watch_txt"> Watch Now</span>
+                        <span> <i class="fas fa-play-circle"></i></span>  <span class="ml-4" id="watch_txt"> Watch Now</span>
                     </button>
 
                     <button id="category_btn_id" onclick="showCategorySection()">
@@ -67,7 +69,7 @@
                     </button>
 
                     <button id="fav_btn_id" onclick="showFavouriteSection()">
-                        <span><i class="far fa-star"></i></span>  <span class="ml-4" id="fav_txt"> Favourites</span>
+                        <span><i class="far fa-star"></i></span>  <span class="ml-3" id="fav_txt"> Favourites</span>
                     </button>
                 </div>
             </div>
@@ -158,7 +160,7 @@
                         </p>
                         <span>
                         <button id="add_play_btn" class="play_btn mt-5">
-                            <i class="fa fa-play text-white"></i><span class="ml-3"> Play Now</span>
+                            <i class="fa fa-play text-white ply_now_style"></i><span class="ml-3"> Play Now</span>
                         </button>
                        
                         <button class="favourite_btn mt-5">
