change bg image done and remember me done

--- a/InternalUAMTv/InternalUAMTv/home/home.html
+++ b/InternalUAMTv/InternalUAMTv/home/home.html
@@ -173,9 +173,9 @@
                      
                         <div class="left_right_arrow">
                             <span id="right_bg">
-								<button class="nonstyle_btns">></button>
+								<button id="right_back_id" class="nonstyle_btns">></button>
 							</span><span id="left_bg">
-								<button class="nonstyle_btns"><</button>
+								<button id="left_back_id" class="nonstyle_btns"><</button>
 
 							</span>
                         </div>
