--- a/InternalUAMTv/InternalUAMTv/Video/video.html
+++ b/InternalUAMTv/InternalUAMTv/Video/video.html
@@ -25,7 +25,7 @@
 
 <body>
 
-<video id="player_one" class="video-js vjs-fluid vjs-default-skin" controls preload playsinline poster="">
+<video id="player_one" class="video-js vjs-fluid vjs-default-skin" controls preload playsinline poster="" data-setup='{ "inactivityTimeout": 0 }'>
 </video>
 <div class="text_documentry " style="visibility: hidden;">Documentry</div>
 <div class="text_view ml-5" style="visibility: hidden;">216K Views</div>
@@ -44,22 +44,6 @@
     </div>
 
 
-<script>
-var player = videojs('player_one');
- var url = localStorage.getItem("video");
-console.log(url);
-player.src({
-  type: 'application/x-mpegURL',
-  src: url
-});
-player.nuevo({
-title: "Nuevo plugin for VideoJs Player"
-});
-player.hotkeys({
-volumeStep: 0.1,
-seekStep: 5
-});
-</script>
 
 </body>
 
