changes in home and movie screen

--- a/InternalUAMTv/InternalUAMTv/Cat_Rec_Most_view/categories.html
+++ b/InternalUAMTv/InternalUAMTv/Cat_Rec_Most_view/categories.html
@@ -92,7 +92,7 @@
                     document.getElementById("mySidenav_ntwork").style.width = "0";
                 }
         </script>
-        <div class="container-fluid" style="margin-top: 164px">
+        <div class="container-fluid main_section" >
             <h1 class="cat_heading"><i id="arrow_left_id" class="fa fa-arrow-left ml-5"><i><span id="screen_title" class="ml-3"></span></i></i>
         </h1>
             <div id="container-fluid-category-id" class="container-fluid mt-4"></div>
