english to russian

--- a/InternalUAMTv/InternalUAMTv/detail/detail.html
+++ b/InternalUAMTv/InternalUAMTv/detail/detail.html
@@ -31,7 +31,7 @@
                 -->
                     <li><i id="fa-user" class="fa fa-user "></i>
                     </li>
-                    <span id="user_name_id" class="user_name">Jamshed</span> 
+                    <span id="user_name_id" class="user_name"></span> 
                 </ul>
             </nav>
         </header>
@@ -133,11 +133,11 @@
 
                 <span>
 
-                <button id="playButton"  class="play_btn mt-5"><i class="fa fa-play text-white"></i><span class="ml-3">Play Now</span>
+                <button id="playButton"  class="play_btn mt-5"><i class="fa fa-play text-white"></i><span class="ml-3">Riproduci ora</span>
                 </button>
-                <button id="trail_btn"  class="watch_btn mt-5"><i class="fa fa-film text-white"></i>Watch Trailer</button>
-                <button id="add_fav_button_id" class="watch_btn mt-5 ml-5"><i class="far fa-star text-white"></i>Add to Favourite</button>
-                <button id="already_fav_button_id"  style='display:none;' class="fav_added mt-5 ml-5"><i class="fa fa-star text-white" ></i>Favourite</button>
+                <button id="trail_btn"  class="watch_btn mt-5"><i class="fa fa-film text-white"></i>Guarda il trailer</button>
+                <button id="add_fav_button_id" class="watch_btn mt-5 ml-5"><i class="far fa-star text-white"></i>Aggiungi ai preferiti</button>
+                <button id="already_fav_button_id"  style='display:none;' class="fav_added mt-5 ml-5"><i class="fa fa-star text-white" ></i>Preferita</button>
 
             <!-- <span><i class="far fa-heart text-white " id="heart_icon "></i> </span> -->
 
@@ -171,7 +171,7 @@
                 <br>
                 <br>
                <br>
-                <h2 class="cast">Director</h2>
+                <h2 class="cast">Direttore</h2>
                 <div id="menu">
                     <br>
                     <br>
