--- a/InternalUAMTv/InternalUAMTv/home/home.html
+++ b/InternalUAMTv/InternalUAMTv/home/home.html
@@ -58,7 +58,7 @@
             <div class="centered">
                 <div class="left_navigation">
                     <span> <i class="fa fa-search"></i></span> 
-                    <input type="text" class="search_Box" placeholder="Search">
+                    <input type="text" class="search_Box" placeholder="Ricerca">
 
                     <button id="watch_btn_id" onclick="showWatchSection()">
                         <span> <i class="fas fa-play-circle"></i></span>  <span class="ml-4" id="watch_txt"> Watch Now</span>
@@ -160,11 +160,11 @@
                         </p>
                         <span>
                         <button id="add_play_btn" class="play_btn mt-5">
-                            <i class="fa fa-play text-white ply_now_style"></i><span class="ml-3"> Play Now</span>
+                            <i class="fa fa-play text-white ply_now_style"></i><span class="ml-3"> Riproduci ora</span>
                         </button>
                        
                         <button class="favourite_btn mt-5">
-                            <i class="fa fa-film text-white"></i><span class="ml-3" id="add_fav_btn"> Watch Trailor</span>
+                            <i class="fa fa-film text-white"></i><span class="ml-3" id="add_fav_btn"> Guarda il trailer</span>
                         </button>
                         
                         </span>
@@ -189,7 +189,7 @@
                                 <div class="d-flex justify-content-between catagory_type_text">
                                     <p id="category_list_id">Category</p>
 
-                                    <button id="see_more_cat_list_id" class="nonstyle_btns">See more ></button>
+                                    <button id="see_more_cat_list_id" class="nonstyle_btns">Vedi altro ></button>
                                 </div>
                                 <div id="myCarousel1" class="carousel slide" data-ride="carousel" data-interval="0">
                                     <!-- Wrapper for carousel items -->
@@ -213,7 +213,7 @@
                             <div class="col-lg-12 mx-auto ml-5">
                                 <div class="d-flex justify-content-between catagory_type_text">
                                     <p id="most_viewed_list_id">Most Viewed</p>
-                                    <button id="see_more_view_list_id" class="nonstyle_btns">See more ></button>
+                                    <button id="see_more_view_list_id" class="nonstyle_btns">Vedi altro ></button>
                                 </div>
                                 <div id="myCarousel2" class="carousel slide" data-ride="carousel" data-interval="0">
                                     <!-- Wrapper for carousel items -->
@@ -238,7 +238,7 @@
                             <div class="col-lg-12 mx-auto ml-5">
                                 <div class="d-flex justify-content-between catagory_type_text">
                                     <p id="most_recent_list_id">Most Recent</p>
-                                    <button id="see_more_recent_list_id" class="nonstyle_btns" >See more ></button>
+                                    <button id="see_more_recent_list_id" class="nonstyle_btns" >Vedi altro ></button>
                                 </div>
                                 <div id="myCarousel3" class="carousel slide" data-ride="carousel" data-interval="0">
                                     <!-- Wrapper for carousel items -->
@@ -262,9 +262,9 @@
                     <div class="container-fluid pl-5 pr-5 ">
                         <div class="row ">
                             <div class="col-lg-12 col-xl-12 ml-4 mt-5">
-                                <h1 class="mt-3" style="font-size: 47px; font-weight: bold;">Categories</h1>
+                                <h1 class="mt-3" style="font-size: 47px; font-weight: bold;">Categorie</h1>
                                 <p class="mt-5" style="font-size: 25px;">
-                                    <i class="fas fa-align-justify mr-3"></i> All Generes and collection
+                                    <i class="fas fa-align-justify mr-3"></i> Tutti i generi e la raccolta
                                 </p>
                                 <div id="container-fluid-category-id" class="container-fluid mt-4"></div>
                             </div>
@@ -277,7 +277,7 @@
                     <div class=" container-fluid pl-5pr-5 ">
                         <div class="row ">
                             <div class="col-lg-12 col-xl-12 ml-2">
-                                <h1 class="mt-3" style="font-size: 47px; font-weight: bold;">Favourites</h1>
+                                <h1 class="mt-3" style="font-size: 47px; font-weight: bold;">Preferite</h1>
                                 <div id="container-fluid-favourite-id" class="container-fluid mt-4"></div>
                             </div>
                         </div>
