--- a/InternalUAMTv/InternalUAMTv/Search/search.html
+++ b/InternalUAMTv/InternalUAMTv/Search/search.html
@@ -11,10 +11,12 @@
         <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
         <script type="text/javascript" src="../js/popper.min.js"></script>
         <script type="text/javascript" src="../js/jquery.js"></script>
+	    <script type="text/javascript" src="search.js"></script>
 
         <script type="text/javascript" src="../js/bootstrap.min.js"></script>
         <link rel="stylesheet" type="text/css" href="../css/all.min.css" />
-        <link rel="stylesheet" type="text/css" href="../Search/.css" />
+        <link rel="stylesheet" type="text/css" href="search.css" />
+       
     </head>
 
     <body>
