search remote integration

--- a/InternalUAMTv/InternalUAMTv/Search/search.html
+++ b/InternalUAMTv/InternalUAMTv/Search/search.html
@@ -33,7 +33,7 @@
                 -->
                 <li><i id="fa-user" class="fa fa-user "></i>
                 </li>
-                <span id="user_name_id" class="user_name">Jamshed</span>
+                <span id="user_name_id" class="user_name"></span>
             </ul>
         </nav>
     </header>
@@ -64,11 +64,11 @@
             <div id="container-fluid_id" class="container-fluid" style="display: none;">            
             </div>
            </div>
-           <div class="not_Found">
+           <div id="not_found_id" class="not_Found">
            <i class="fa fa-film"></i>
            <p class="errMsg">Oops!!</p>
-           <p>Looks like we couldn't find any matches.</p> 
-           <p>Try again or browse on Closets.</p>
+           <p>Sembra che non siamo riusciti a trovare alcuna corrispondenza.</p> 
+           <p>Riprova o naviga su Armadi.</p>
            </div>
         </div>
     </body>
