--- a/InternalUAMTv/InternalUAMTv/signup/signup.html
+++ b/InternalUAMTv/InternalUAMTv/signup/signup.html
@@ -9,9 +9,8 @@
     <title>Tizen Web IDE - Tizen - Samsung Tizen TV basic Application</title>
 
     <link rel="stylesheet" type="text/css" href="signup.css" />
-    <link rel="stylesheet" type="text/css" href="css/all.min.css" />
-    <script src="js/login.js"></script>
-    <script src="language.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/all.min.css" />
+    <script src="signup.js"></script>
 
     <script type="text/javascript" src="$WEBAPIS/webapis/webapis.js"></script>
 
@@ -35,6 +34,8 @@
         </div>
     </div>
 
+
+<div id="opacity_effect">
 
 
         <div class="section1">
@@ -68,11 +69,17 @@
                 <br>
                 <br>
                 <div class="chebox_btn_section">
-                    <h2>Already a user ? <button class="nonStyle_btn"  id="subscribe" ><strong style="color: #FF8400 !important;">Sign In</strong></button></h2>
-                    <button class="loginBtn">Register</button>
+                    <h2>Already a user ? <button class="nonStyle_btn"  id="subscribe" ><strong>Sign In</strong></button></h2>
+                    <button id="loginBtnID" class="loginBtn">Register</button>
                 </div>
             </div>
         </div>
+
+
+
+</div>
+
+
 </body>
 
 </html>
