changes in home and video screen

--- a/InternalUAMTv/InternalUAMTv/Video/video.html
+++ b/InternalUAMTv/InternalUAMTv/Video/video.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col-1 text-center"><i class="fa fa-fast-forward"></i>
             </div>
-            <div class="col-2 offset-2 "><span><i class="fa fa-credit-card mr-5"></i></span><span><i class="fa fa-cog mr-3 "></i></span><span style="visibility: hidden;">10:00:00</span></div>
+            <div class="col-2 offset-2 " style="visibility: hidden;"><span><i class="fa fa-credit-card mr-5"></i></span><span><i class="fa fa-cog mr-3 "></i></span><span >10:00:00</span></div>
         </div>
     </div>
 
