--- a/InternalUAMTv/InternalUAMTv/home/home.html
+++ b/InternalUAMTv/InternalUAMTv/home/home.html
@@ -72,6 +72,9 @@
                     <button id="fav_btn_id" onclick="showFavouriteSection()">
                         <span><i class="far fa-star"></i></span>  <span class="ml-3" id="fav_txt"> Favourites</span>
                     </button>
+                     <button id="fav_btn_id" onclick="logout()">
+                        <span><i class="fas fa-sign-out-alt"></i></span>  <span class="ml-3" id="logout_txt"> Logout</span>
+                    </button>
                 </div>
             </div>
             <button id="setting_btn_id" class="setting_btn" onclick="settingsNavigate()">
